Update getAllProducts() and getAllActiveProducts()